--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,9 @@ footer {
     text-align: center;
     padding: 20px;
 }
-
+p.section-subtitle {
+    margin-bottom: 2rem;
+}
 @media (min-width: 992px) {
     .navbar-expand-lg .navbar-nav {
         gap: 20px;
