--- a/css/main.css
+++ b/css/main.css
@@ -67,10 +67,12 @@ fieldset:disabled .btn {
     background: rgba(0, 0, 0, 0.65);
 }
 
-.hero-section-content {
-    text-align: left;
-    max-width: 50%;
-    margin-left: 0;
+@media (min-width:991px) {
+    .hero-section-content {
+        text-align: left;
+        max-width: 50%;
+        margin-left: 0;
+    }
 }
 
 .cta-section {
