--- a/css/main.css
+++ b/css/main.css
@@ -30,9 +30,16 @@ fieldset:disabled .btn {
     border-color: var(--primary-color);
 }
 
+@media (min-width:991px) {
+    .section-container {
+        padding-top: 80px;
+        padding-bottom: 80px;
+    }
+}
+
 .section-container {
-    padding-top: 80px;
-    padding-bottom: 80px;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
 
 .navbar-toggler:focus {
@@ -58,9 +65,16 @@ fieldset:disabled .btn {
 }
 
 .hero {
-    padding: 100px 20px;
+    padding: 40px 20px;
     background: url(../images/book-cover2.jpg) center / cover no-repeat;
-    min-height: 100vh;
+}
+
+@media (min-width:991px) {
+
+    .hero {
+        padding: 100px 20px;
+        min-height: 100vh;
+    }
 }
 
 .hero .overlay {
